--- a/EsempiDom.html
+++ b/EsempiDom.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     <button id="b1">Click me</button>
-
     <p id="p1"></p>
-
-
+    <section id="toDoList">
+        <input type="text" id="taskInput" placeholder="Insert new task">
+        <button disabled>Add task</button>
+        <div>
+            <ul>
+            
+            </ul>
+        </div>
+    </section>
+    
     <script src="EsempiDom.js"></script>
 </body>
 </html>
